updated the kurdish homepage

--- a/index - kur.html
+++ b/index - kur.html
@@ -199,9 +199,7 @@
       const langBtn = document.getElementById('lang-btn');
       // Update the language button icon
       langBtn.innerHTML = '<i class="fas fa-globe"></i>';
-
       // Add code here for changing the language based on the selected language
-
       // Example code for displaying a success message
       console.log(`Language changed to ${language}`);
     }
@@ -778,7 +776,7 @@
                     role="tab"
                     aria-controls="pills-docs"
                     aria-selected="true"
-                    >الخبرة التسويق الإليكترونی</a
+                    >ئەزموونی بەبازاڕکردنی ئیمەیڵ</a
                   >
                 </li>
                 <li class="nav-item" role="presentation">
@@ -3373,16 +3371,16 @@ info@tebrae.krd
                           >دەربارەی ئێمە</a
                         >
                       </li>
-                      <li class="footer__block__list__item">
+                      <!-- <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
                           >هەواڵ&پرێس</a
                         >
-                      </li>
-                      <li class="footer__block__list__item">
+                      </li> -->
+                      <!-- <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
                           > ئەزموون ناساندن</a
                         >
-                      </li>
+                      </li> -->
                        <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
                           >هاوبەشەکان</a
@@ -3405,7 +3403,7 @@ info@tebrae.krd
                 <div class="col-xl-auto col-md-3 col-6">
                   <div class="footer__block">
                     <h4 class="footer__block__title text-uppercase">
-                     کەرەستە
+                     خزمەتگوزاری
                     </h4>
                     <ul class="footer__block__list">
                       <li class="footer__block__list__item">
@@ -3445,27 +3443,26 @@ info@tebrae.krd
                 <div class="col-xl-auto col-md-3 col-6">
                   <div class="footer__block">
                     <h4 class="footer__block__title text-uppercase">
-                      الحلول
-                    </h4>
+چارەسەرەکان                    </h4>
                     <ul class="footer__block__list">
                       <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
-                          >النمو</a
+                          >گەشەکردن</a
                         >
                       </li>
                       <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
-                          >التحدثات</a
+                          >گفتوگۆ</a
                         >
                       </li>
-                      <li class="footer__block__list__item">
+                      <!-- <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
                           >الانسيابية</a
                         >
-                      </li>
+                      </li> -->
                        <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
-                          >كيفية العمل</a
+                          >چۆن کاردەکات</a
                         >
                       </li>
                     </ul>
@@ -3473,60 +3470,60 @@ info@tebrae.krd
                 </div>
                 <div class="col-xl-auto col-md-3 col-6">
                   <div class="footer__block">
-                    <h4 class="footer__block__title text-uppercase">الشركة</h4>
+                    <h4 class="footer__block__title text-uppercase">کۆمپانیا</h4>
                     <ul class="footer__block__list">
                       <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
-                          >العملاء</a
+                          >کڕیارەکان</a
                         >
                       </li>
                       <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
-                          >العلامة التجارية</a
+                          >هێمای بازرگانی</a
                         >
                       </li>
                       <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
-                          >المراجعات</a
+                          >پێداچوونەوەکان</a
                         >
                       </li>
-                        <li class="footer__block__list__item">
+                        <!-- <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
                           >الحالة</a
                         >
-                      </li>
+                      </li> -->
                       </li>
                         <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
-                          >الاحداث</a
+                          >ڕووداوەکان</a
                         >
                       </li>
                       </li>
-                        <li class="footer__block__list__item">
+                        <!-- <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
                           >الانباء</a
                         >
-                      </li>
+                      </li> -->
                     </ul>
                   </div>
                 </div>
                 <div class="col-xl-auto col-md-3 col-6">
                   <div class="footer__block">
-                    <h4 class="footer__block__title text-uppercase">السلامة</h4>
+                    <h4 class="footer__block__title text-uppercase">ئاسایش</h4>
                     <ul class="footer__block__list">
-                      <li class="footer__block__list__item">
+                      <!-- <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
                           >الامن</a
                         >
-                      </li>
+                      </li> -->
                       <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
-                          >الحماية</a
+                          >پاراستن</a
                         >
                       </li>
                       <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
-                          >الاحكام</a
+                          >بڕگەکان</a
                         >
                       </li>
                     </ul>
