--- a/index - kur.html
+++ b/index - kur.html
@@ -3271,7 +3271,9 @@ info@tebrae.krd
 
 
 
-    <!-- Footer Section -->
+<!-- footer section -->
+<container class="container-footer">
+   <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
         <div class="row">
@@ -3371,6 +3373,7 @@ info@tebrae.krd
                           >دەربارەی ئێمە</a
                         >
                       </li>
+
                       <!-- <li class="footer__block__list__item">
                         <a href="#!" class="footer__block__list__link"
                           >هەواڵ&پرێس</a
@@ -3618,7 +3621,9 @@ info@tebrae.krd
           </div>
         </div>
       </div>
-    </footer>
+    </footer> </container>
+
+
 
     <!-- Contact Modal Section -->
     <div
