--- a/index - ar.html
+++ b/index - ar.html
@@ -3272,9 +3272,8 @@ TEBRAE
 
 
 
-
-
-    <!-- Footer Section -->
+<!-- footer section -->
+<container class="container-footer">   <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
         <div class="row">
@@ -3619,7 +3618,9 @@ TEBRAE
           </div>
         </div>
       </div>
-    </footer>
+    </footer></container>
+
+
     <!-- Contact Modal Section -->
 
     <div
