--- a/About/About.html
+++ b/About/About.html
@@ -156,7 +156,7 @@
 
     .lang-btn {
       font-family: 'Roboto', sans-serif;
-      background-color: #d40121;
+      background-color: #1963a2;
       color: white;
       padding: 10px;
       cursor: pointer;
@@ -183,7 +183,7 @@
     }
 
     .lang-dropdown-content a:hover {
-      color: #d40121 ;
+      color: #1963a2 ;
     }
 
     .lang-dropdown:hover .lang-dropdown-content {
@@ -215,7 +215,7 @@
       // Example code for displaying a success message
       console.log(`Language changed to ${language}`);
     }
-  </script> </li>
+  </script></li>
                 <!-- <li class="nav-item">
                   <a
                     class="nav-link"
@@ -270,7 +270,7 @@
             </div>
             <div class="col-lg-5">
               <h1 class="banner__title">
-                <span class="d-lg-block">we aim to be your strategic partner in the ever-evolving healthcare landscape </span>
+                <span class="d-lg-block">We aim to be your strategic partner in the healthcare landscape </span>
               </h1>
               <p class="banner__text">
               Our team of experts is committed to helping you achieve your goals, and together, we can make a positive impact on the healthcare industry.
@@ -316,11 +316,25 @@
 
 
     <!-- Features (pink) Section -->
-    <!-- <section class="features features--pink" id="section1">
+     <section class="features features--pink">
       <div class="features__container mx-auto">
         <div class="container">
           <div class="row">
             <div class="col-12">
+              <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <a
+                    class="nav-link position-relative active"
+                    id="pills-projectAndTasks-tab"
+                    data-toggle="pill"
+                    href="#pills-projectAndTasks"
+                    role="tab"
+                    aria-controls="pills-projectAndTasks"
+                    aria-selected="true"
+                    >About us</a
+                  >
+                </li>
+             </ul>
             </div>
             <div class="col-12">
               <div class="tab-content" id="pills-tabContent">
@@ -336,15 +350,15 @@
                         class="features__videos-wrapper features__videos-wrapper--negative-margin"
                       >
                         <video
-                          src="../assets/videos/Trello-Record.mp4"
-                          poster="../assets/videos/Trello-Record.mp4"
+                          src="./images/website.png"
+                          poster="./images/website.png"
                           class="features__videos w-100 h-100"
                           autoplay= "true"
                           loop="true"
                           muted="muted"
                         >
                           <source
-                            src="../assets/videos/Trello-Record.mp4"
+                            src="./images/website.png"
                             type="video/mp4"
                           />
                         </video>
@@ -352,15 +366,24 @@
                     </div>
                     <div class="col-xl-4 col-lg-6">
                       <h2 class="features__title">
-                        Welcome to Tebrae
+                        Data is our compass in the ocean of possibilities
                       </h2>
                       <p class="features__text">
-                      We’re not just a digital marketing agency; we’re your partners in growth. As an industry and a unique niche medical marketing leader, Tebrae believes in crafting content strategies that are not only innovative and engaging but also reflective of your brand’s authenticity
+                      Our team of data experts meticulously collects, analyzes, and interprets relevant data to reveal valuable patterns and trends. This treasure trove of information empowers us to create marketing campaigns that not only capture attention but also leave a lasting impact on your target audience.
                       </p>
                       <div
                         class="features__list-wrapper d-flex align-items-end flex-wrap"
-                      > -->
-
+                      >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
                       <!-- </div> -->
                       <!-- <button
                         class="primary-btn primary-btn--pink dark-hover"
@@ -2450,7 +2473,7 @@ A single healthcare platform to achieve more with less work
                   </a>
                   <p class="footer__copyright mb-0 mt-2">
                     © 2023 Tebrae
-                    <a
+                    <!-- <a
                       href="#!"
                       class="footer__copyright__link d-inline-block position-relative"
                       >Security</a
@@ -2464,7 +2487,7 @@ A single healthcare platform to achieve more with less work
                       href="#!"
                       class="footer__copyright__link d-inline-block position-relative"
                       >Terms</a
-                    >
+                    > -->
                   </p>
                 </div>
                 <div class="col-md-6 mt-4 mt-md-0">
