--- a/index - kur.html
+++ b/index - kur.html
@@ -115,29 +115,7 @@
 									<a class="dropdown-item" href="#">Action</a>
 									<a class="dropdown-item" href="#">Another action</a>
 								</div> -->
-                </li>
-                  <li class="nav-item">
-                  <a class="nav-link" id="nav" href="javascript:void(0)"> سەرەکی
-
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="nav" href="javascript:void(0)">دەربارە</a>
-                </li>
-                  <li class="nav-item">
-                  <a class="nav-link" id="nav" href="javascript:void(0)">
-بلۆگ
-
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="nav" href="#">خزمەتگوزاری
-                    <span class="dropdown-toggle__icon d-inline-block">
-                      <i data-feather='chevron-down'></i>
-                    </span>
-                  </a>
-                </li>
-                <li><style>
+                                <li><style>
     /* CSS styles for the language selection */
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 
@@ -183,6 +161,7 @@
     }
   </style>
 </head>
+
 <li>
   <div class="lang-dropdown">
     <button class="lang-btn" id="lang-btn"><i class="fas fa-globe"></i></button>
@@ -204,6 +183,29 @@
       console.log(`Language changed to ${language}`);
     }
   </script> </li>
+                </li>
+                  <li class="nav-item">
+                  <a class="nav-link" id="nav" href="javascript:void(0)"> سەرەکی
+
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="nav" href="javascript:void(0)">دەربارە</a>
+                </li>
+                  <li class="nav-item">
+                  <a class="nav-link" id="nav" href="javascript:void(0)">
+بلۆگ
+
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="nav" href="#">خزمەتگوزاری
+                    <span class="dropdown-toggle__icon d-inline-block">
+                      <i data-feather='chevron-down'></i>
+                    </span>
+                  </a>
+                </li>
+
                 <!-- <li class="nav-item">
                   <a
                   id="nav"
@@ -454,7 +456,7 @@
                     role="tab"
                     aria-controls="pills-chat"
                     aria-selected="false"
-                    >خزمەتگوزاری</a
+                    >شێواز</a
                   >
                 </li>
                 <li class="nav-item" role="presentation">
@@ -466,7 +468,7 @@
                     role="tab"
                     aria-controls="pills-goals"
                     aria-selected="false"
-                    >مەنهەج </a
+                    >خزمەتگوزاری </a
                   >
                 </li>
                 <!-- <li class="nav-item" role="presentation">
@@ -776,7 +778,7 @@
                     role="tab"
                     aria-controls="pills-docs"
                     aria-selected="true"
-                    >ئەزموونی بەبازاڕکردنی ئیمەیڵ</a
+                    > بەبازاڕکردن</a
                   >
                 </li>
                 <li class="nav-item" role="presentation">
@@ -1542,7 +1544,7 @@ i
                     role="tab"
                     aria-controls="pills-sales"
                     aria-selected="false"
-                    >خشتەی چاوپێکەوتن</a
+                    >چاوپێکەوتن</a
                   >
                 </li>
                 <!-- <li class="nav-item" role="presentation">
@@ -1579,7 +1581,7 @@ i
                     role="tab"
                     aria-controls="pills-finance"
                     aria-selected="false"
-                    >پراکتیزەکردنی بەبازاڕکردن </a
+                    >بەبازاڕکردن </a
                   >
                 </li>
 
