--- a/About/About.html
+++ b/About/About.html
@@ -196,8 +196,8 @@
     <button class="lang-btn" id="lang-btn"><i class="fas fa-globe"></i></button>
     <div class="lang-dropdown-content">
       <a class="lang-option" onclick="changeLanguage('English')" href="index.html" >English</a>
-      <a class="lang-option" onclick="changeLanguage('Arabic')" href="./index - ar.html" >Arabic</a>
-      <a class="lang-option" onclick="changeLanguage('Kurdish')"  href="index - ar.html">Kurdish</a>
+      <a class="lang-option" onclick="changeLanguage('Arabic')" href="./index - ar.html" >العربية</a>
+      <a class="lang-option" onclick="changeLanguage('Kurdish')"  href="index - ar.html">کوردی</a>
     </div>
   </div>
 
@@ -276,30 +276,13 @@
               Our team of experts is committed to helping you achieve your goals, and together, we can make a positive impact on the healthcare industry.
               </p>
 
-              <!-- <form
-                action="javascript:void(0)"
-                class="banner__form needs-validation"
-                novalidate
-              >
-                <div class="form-group">
-                  <input
-                    type="email"
-                    class="form-control"
-                    placeholder="Enter your email address"
-                    required
-                  />
-                  <div class="invalid-feedback text-center mt-0">
-                    Please enter a valid email address
-                  </div>
-                </div>
-              </form>
               <div class="banner__btn-wrapper">
                 <button
                   class="primary-btn primary-btn--primary dark-hover"
                 >
-                  Submit
+                  Get Started
                 </button>
-              </div> -->
+              </div>
 
 
               </div>
@@ -2233,7 +2216,7 @@ A single healthcare platform to achieve more with less work
                   </div>
                   <div class="footer__icon-card__content">
                     <a href="#!" class="footer__icon-card__link"
-                      >meticulous OKR-driven process </a
+                      >Meticulous OKR-driven process </a
                     >
                     <!-- <span>&</span>
                     <a href="#!" class="footer__icon-card__link"
@@ -2274,7 +2257,7 @@ A single healthcare platform to achieve more with less work
                   </div>
                   <div class="footer__icon-card__content">
                     <a href="#!" class="footer__icon-card__link"
-                      >quality, precision, and efficiency converge.</a
+                      >Quality, precision, and efficiency converge.</a
                     >
 
                   </div>
