--- a/index - ar.html
+++ b/index - ar.html
@@ -60,7 +60,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+
        <link rel="stylesheet" href="./assets/css/rtl.css" />
            <link rel="icon" href="/assets/images/banner/TebraeLOGOLINES-1.png" type="image/png">
              <!-- Google tag (gtag.js) -->
@@ -3220,7 +3220,7 @@ TEBRAE
         </div>
         <div class="accordion-item">
           <button id="accordion-button-2" aria-expanded="false">
-            <span class="accordion-title">خدمات Tebrae !؟</span>
+            <span class="accordion-title">خدمات Tebrae ؟</span>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
@@ -3235,7 +3235,7 @@ TEBRAE
         </div>
         <div class="accordion-item">
           <button id="accordion-button-3" aria-expanded="false">
-            <span class="accordion-title">ساعات عمل تبراي !؟</span>
+            <span class="accordion-title">ساعات عمل تبراي  ؟</span>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
@@ -3246,7 +3246,7 @@ TEBRAE
         </div>
         <div class="accordion-item">
           <button id="accordion-button-4" aria-expanded="false">
-            <span class="accordion-title">كيف يمكنني التواصل معكم؟</span>
+            <span class="accordion-title">كيف يمكنني التواصل معكم  ؟</span>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
@@ -3257,7 +3257,7 @@ TEBRAE
         </div>
         <div class="accordion-item">
           <button id="accordion-button-5" aria-expanded="false">
-            <span class="accordion-title">في أي مدن تقدمون الخدمات؟</span>
+            <span class="accordion-title">في أي مدن تقدمون الخدمات  ؟</span>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
@@ -3274,7 +3274,7 @@ TEBRAE
 
 
 <!-- footer section -->
-<container class="container-footer">   <!-- Footer Section -->
+
     <footer class="footer">
       <div class="container">
         <div class="row">
@@ -3619,7 +3619,7 @@ TEBRAE
           </div>
         </div>
       </div>
-    </footer></container>
+    </footer>
     <!-- Contact Modal Section -->
 
     <div
