added new images

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <!-- Site Title -->
     <title>Tebrae</title>
     <!-- Favicon Link -->
-
-
     <link
       rel="icon"
       type="image/png"
@@ -2418,12 +2416,12 @@ A single healthcare platform to achieve more with less work
       <div class="accordion">
         <div class="accordion-item">
           <button id="accordion-button-1" aria-expanded="false">
-            <span class="accordion-title">About Tebrae!?</span>
+            <span class="accordion-title">About Tebrae!?</span> <br>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
             <p>
-             tebrae is burgeoning medical digital marketing agency based in sulaymani, renowned for its innovative approach to the healthcare marketing sphere.
+             Tebrae is burgeoning medical digital marketing agency based in sulaymani, renowned for its innovative approach to the healthcare marketing sphere.
             </p>
           </div>
         </div>
@@ -2468,7 +2466,7 @@ Info@tebrae.krd
         </div>
         <div class="accordion-item">
           <button id="accordion-button-5" aria-expanded="false">
-            <span class="accordion-title">In which cities do you offer services?</span>
+            <span class="accordion-title">Where do you offer services?</span>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
@@ -2799,14 +2797,7 @@ Info@tebrae.krd
         </div>
       </div>
     </footer>
-
 </container>
-
-
-
-
-
-
         <!-- Scroll To Top Button -->
     <div class="scroll-top position-fixed">
       <button
